--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     },
     "homepage": "https://github.com/MomoRazor/kartikontrakulhadd-api#readme",
     "dependencies": {
+        "axios": "^0.23.0",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
-        "helmet": "^4.6.0"
+        "helmet": "^4.6.0",
+        "moment": "^2.29.1"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
