--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "helmet": "^4.6.0",
-        "moment": "^2.29.1"
+        "moment": "^2.29.1",
+        "mongodb": "^4.1.3"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
