--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc",
         "dev": "nodemon ./src/index.ts",
-        "start": "node ./dist/index.js"
+        "start": "node ./dist/index.js",
+        "npm-check": "npm-check -u -E"
     },
     "repository": {
         "type": "git",
@@ -20,24 +21,22 @@
     },
     "homepage": "https://github.com/MomoRazor/kartikontrakulhadd-api#readme",
     "dependencies": {
-        "axios": "^0.27.2",
-        "body-parser": "^1.20.0",
-        "cors": "^2.8.5",
-        "dotenv": "^16.0.1",
-        "express": "^4.18.1",
-        "helmet": "^5.1.0",
-        "moment": "^2.29.3",
-        "mongodb": "^4.7.0"
+        "axios": "0.27.2",
+        "body-parser": "1.20.0",
+        "cors": "2.8.5",
+        "dotenv": "16.0.2",
+        "express": "4.18.1",
+        "helmet": "6.0.0",
+        "moment": "2.29.4",
+        "mongodb": "4.9.1"
     },
     "devDependencies": {
-        "@types/cors": "^2.8.12",
-        "@types/express": "^4.17.13",
-        "@types/node": "^18.0.0",
-        "nodemon": "^2.0.18",
-        "ts-node": "^10.8.1",
-        "typescript": "^4.7.4"
-    },
-    "engines": {
-        "node": "16.x"
+        "@types/cors": "2.8.12",
+        "@types/express": "4.17.13",
+        "@types/node": "18.7.14",
+        "nodemon": "2.0.19",
+        "npm-check": "6.0.1",
+        "ts-node": "10.9.1",
+        "typescript": "4.8.2"
     }
 }
