--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "npm i & tsc",
+        "build": "npm i & npx tsc",
         "dev": "nodemon ./src/index.ts",
         "start": "node ./dist/index.js",
         "npm-check": "npm-check -u -E"
