--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
         "npm-check": "6.0.1",
         "ts-node": "10.9.1",
         "typescript": "4.8.2"
+    },
+    "engines": {
+        "node": "16.17.0"
     }
 }
