--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "npm i & tsc",
+        "build": "tsc",
         "dev": "nodemon ./src/index.ts",
         "start": "node ./dist/index.js",
         "npm-check": "npm-check -u -E"
@@ -36,7 +36,8 @@
         "@types/node": "18.7.14",
         "nodemon": "2.0.19",
         "ts-node": "10.9.1",
-        "typescript": "4.8.2"
+        "typescript": "4.8.2",
+        "npm-check": "6.0.1"
     },
     "engines": {
         "node": "16.x"
