--- a/package.json
+++ b/package.json
@@ -21,23 +21,23 @@
     },
     "homepage": "https://github.com/MomoRazor/kartikontrakulhadd-api#readme",
     "dependencies": {
-        "axios": "0.27.2",
-        "body-parser": "1.20.0",
+        "axios": "1.1.3",
+        "body-parser": "1.20.1",
         "cors": "2.8.5",
-        "dotenv": "16.0.2",
-        "express": "4.18.1",
+        "dotenv": "16.0.3",
+        "express": "4.18.2",
         "helmet": "6.0.0",
         "moment": "2.29.4",
-        "mongodb": "4.9.1"
+        "mongodb": "4.10.0"
     },
     "devDependencies": {
         "@types/cors": "2.8.12",
-        "@types/express": "4.17.13",
-        "@types/node": "18.7.14",
-        "nodemon": "2.0.19",
+        "@types/express": "4.17.14",
+        "@types/node": "18.11.0",
+        "nodemon": "2.0.20",
+        "npm-check": "6.0.1",
         "ts-node": "10.9.1",
-        "typescript": "4.8.2",
-        "npm-check": "6.0.1"
+        "typescript": "4.8.4"
     },
     "engines": {
         "node": "16.x"
