--- a/package.json
+++ b/package.json
@@ -21,25 +21,24 @@
     },
     "homepage": "https://github.com/MomoRazor/kartikontrakulhadd-api#readme",
     "dependencies": {
-        "axios": "1.1.3",
+        "axios": "1.2.1",
         "body-parser": "1.20.1",
         "cors": "2.8.5",
         "dotenv": "16.0.3",
         "express": "4.18.2",
-        "helmet": "6.0.0",
+        "helmet": "6.0.1",
+        "jsonwebtoken": "9.0.0",
         "moment": "2.29.4",
-        "mongodb": "4.10.0"
+        "mongoose": "6.8.1"
     },
     "devDependencies": {
-        "@types/cors": "2.8.12",
-        "@types/express": "4.17.14",
-        "@types/node": "18.11.0",
+        "@types/cors": "2.8.13",
+        "@types/express": "4.17.15",
+        "@types/jsonwebtoken": "9.0.0",
+        "@types/node": "18.11.17",
         "nodemon": "2.0.20",
         "npm-check": "6.0.1",
         "ts-node": "10.9.1",
-        "typescript": "4.8.4"
-    },
-    "engines": {
-        "node": "16.x"
+        "typescript": "4.9.4"
     }
 }
