--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "tsc",
         "dev": "nodemon ./src/index.ts",
         "start": "node ./dist/index.js",
-        "npm-check": "npm-check -u -E"
+        "check": "npm-check -u -E"
     },
     "repository": {
         "type": "git",
@@ -21,24 +21,27 @@
     },
     "homepage": "https://github.com/MomoRazor/kartikontrakulhadd-api#readme",
     "dependencies": {
-        "axios": "1.2.1",
-        "body-parser": "1.20.1",
+        "@sector-eleven-ltd/cosmos-lite": "1.2.7",
+        "@sendgrid/mail": "7.7.0",
+        "axios": "1.4.0",
         "cors": "2.8.5",
-        "dotenv": "16.0.3",
+        "dotenv": "16.1.4",
         "express": "4.18.2",
-        "helmet": "6.0.1",
+        "morgan": "1.10.0",
         "jsonwebtoken": "9.0.0",
-        "moment": "2.29.4",
-        "mongoose": "6.8.1"
+        "luxon": "3.3.0",
+        "mongoose": "7.2.2"
     },
     "devDependencies": {
+        "@types/morgan": "1.9.4",
         "@types/cors": "2.8.13",
-        "@types/express": "4.17.15",
-        "@types/jsonwebtoken": "9.0.0",
-        "@types/node": "18.11.17",
-        "nodemon": "2.0.20",
+        "@types/express": "4.17.17",
+        "@types/jsonwebtoken": "9.0.2",
+        "@types/luxon": "3.3.0",
+        "@types/node": "20.2.5",
+        "nodemon": "2.0.22",
         "npm-check": "6.0.1",
         "ts-node": "10.9.1",
-        "typescript": "4.9.4"
+        "typescript": "5.1.3"
     }
 }
