--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "description": "The API for KartiKontraKulhadd system",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc",
         "dev": "nodemon ./src/index.ts",
         "start": "node ./dist/index.js",
-        "check": "npm-check -u -E"
+        "check": "npm-check -u -E",
+        "test": "jest"
     },
     "repository": {
         "type": "git",
@@ -27,18 +27,20 @@
         "cors": "2.8.5",
         "dotenv": "16.1.4",
         "express": "4.18.2",
-        "morgan": "1.10.0",
         "jsonwebtoken": "9.0.0",
         "luxon": "3.3.0",
-        "mongoose": "7.2.2"
+        "mongoose": "7.2.3",
+        "morgan": "1.10.0"
     },
     "devDependencies": {
-        "@types/morgan": "1.9.4",
         "@types/cors": "2.8.13",
         "@types/express": "4.17.17",
         "@types/jsonwebtoken": "9.0.2",
         "@types/luxon": "3.3.0",
-        "@types/node": "20.2.5",
+        "@types/morgan": "1.9.4",
+        "@types/node": "20.2.6",
+        "@types/jest": "29.5.2",
+        "ts-jest": "29.1.0",
         "nodemon": "2.0.22",
         "npm-check": "6.0.1",
         "ts-node": "10.9.1",
