--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "tsc",
         "dev": "nodemon ./src/index.ts",
-        "start": "node ./dist/index.js",
+        "start": "node ./dist/src/index.js",
         "check": "npm-check -u -E",
         "test": "jest"
     },
@@ -21,7 +21,6 @@
     },
     "homepage": "https://github.com/MomoRazor/kartikontrakulhadd-api#readme",
     "dependencies": {
-        "@sector-eleven-ltd/cosmos-lite": "1.6.20",
         "@sendgrid/mail": "7.7.0",
         "axios": "1.5.1",
         "cors": "2.8.5",
@@ -29,6 +28,7 @@
         "express": "4.18.2",
         "jsonwebtoken": "9.0.2",
         "luxon": "3.4.3",
+        "nodemon": "2.0.22",
         "mongoose": "7.5.3",
         "morgan": "1.10.0"
     },
@@ -40,7 +40,6 @@
         "@types/luxon": "3.3.2",
         "@types/morgan": "1.9.6",
         "@types/node": "20.8.0",
-        "nodemon": "2.0.22",
         "npm-check": "6.0.1",
         "ts-jest": "29.1.1",
         "ts-node": "10.9.1",
