--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "dev": "nodemon ./src/index.ts",
         "start": "node ./dist/src/index.js",
         "check": "npm-check -u -E",
-        "test": "jest"
+        "test": "jest",
+        "refresh-packages": "rm -rf node_modules && rm -rf package-lock.json && npm i"
     },
     "repository": {
         "type": "git",
@@ -21,28 +22,28 @@
     },
     "homepage": "https://github.com/MomoRazor/kartikontrakulhadd-api#readme",
     "dependencies": {
-        "@sendgrid/mail": "7.7.0",
-        "axios": "1.5.1",
+        "axios": "1.10.0",
         "cors": "2.8.5",
-        "dotenv": "16.3.1",
-        "express": "4.18.2",
+        "dotenv": "17.0.1",
+        "express": "5.1.0",
         "jsonwebtoken": "9.0.2",
-        "luxon": "3.4.3",
-        "nodemon": "2.0.22",
-        "mongoose": "7.5.3",
-        "morgan": "1.10.0"
+        "luxon": "3.6.1",
+        "mongoose": "8.16.1",
+        "morgan": "1.10.0",
+        "nodemon": "3.1.10",
+        "@getbrevo/brevo": "2.5.0"
     },
     "devDependencies": {
-        "@types/cors": "2.8.14",
-        "@types/express": "4.17.18",
-        "@types/jest": "29.5.5",
-        "@types/jsonwebtoken": "9.0.3",
-        "@types/luxon": "3.3.2",
-        "@types/morgan": "1.9.6",
-        "@types/node": "20.8.0",
+        "@types/cors": "2.8.19",
+        "@types/express": "5.0.3",
+        "@types/jest": "30.0.0",
+        "@types/jsonwebtoken": "9.0.10",
+        "@types/luxon": "3.6.2",
+        "@types/morgan": "1.9.10",
+        "@types/node": "24.0.10",
         "npm-check": "6.0.1",
-        "ts-jest": "29.1.1",
-        "ts-node": "10.9.1",
-        "typescript": "5.2.2"
+        "ts-jest": "29.4.0",
+        "ts-node": "10.9.2",
+        "typescript": "5.8.3"
     }
 }
